@@ -8,4 +8,5 @@ __tests__
 .husky/
 .prettierrc
 mysql/
+.yadu/
 lambdas/
