@@ -2,7 +2,8 @@ const AWS = require('aws-sdk');
 const path = require('path');
 const colors = require('colors');
 const { retrieveSecrets } = require('./secretManager');
-const { logDebug } = require('../liquibase/src/utils');
+const { logDebug, logVerbose } = require('../globals/utils');
+const Config = require('./classes/Config');
 
 colors.setTheme({
   warn: 'yellow',
@@ -12,6 +13,13 @@ colors.setTheme({
   action: 'cyan',
 });
 
+// TODO: Later this variable will be automatically populated using the nearest .git folder
+const BASE_PATH = path.join('.', '.yadu') + path.sep;
+
+/**
+ *
+ * @param {Object} args
+ */
 function assignVariables(args = {}) {
   // Build DB URLs
   //   Reference Database
@@ -79,6 +87,10 @@ function assignVariables(args = {}) {
   }
 }
 
+/**
+ *
+ * @param {Object} args
+ */
 function configureProfileAndRegion(args = {}) {
   process.env.AWS_PROFILE = args.profile || process.env.AWS_PROFILE || process.env.PROFILE || 'default';
   process.env.AWS_REGION = args.region || process.env.AWS_REGION || process.env.REGION || 'us-east-1';
@@ -90,10 +102,17 @@ function configureProfileAndRegion(args = {}) {
   }
 }
 
+/**
+ *
+ * @param {Object} args
+ * @returns Object
+ */
 const loadArgs = async (args = {}) => {
   logDebug('Loading Env. variables'.info);
 
   configureProfileAndRegion(args);
+
+  const config = Config.LoadConfig(`${BASE_PATH + (process.env.NODE_ENV || 'config')}.json`);
 
   // Configure AWS SDK using the process.env variables
   const credentials = new AWS.SharedIniFileCredentials({ profile: process.env.AWS_PROFILE });
@@ -114,6 +133,9 @@ const loadArgs = async (args = {}) => {
     // Print the env. variables. Be careful.
     console.debug(process.env);
   }
+
+  logVerbose(process.env);
+  return config || {};
 };
 
 module.exports = {
