@@ -3,14 +3,11 @@ const path = require('path');
 const AWS = require('aws-sdk');
 const shell = require('shelljs');
 const { getAccountId } = require('./utils');
+const Converter = require('./classes/ReadYaml');
+const { logDebug } = require('../globals/utils');
 
 const lambda = new AWS.Lambda();
 const sts = new AWS.STS();
-
-function logDebug(args, message) {
-  // Helpers
-  return (args.debug || process.env.DEBUG) && console.log(message);
-}
 
 function listVersions(fnName, marker = '') {
   return new Promise((resolve, reject) => {
@@ -69,12 +66,12 @@ function GetLambdaInfo() {
 /**
  * Publish or Package the lambda function
  */
-async function publish(args) {
+async function publish(args, config = {}) {
   // If we want to override the layerVersion maybe useful for testing, multi-region/multi-account for CD
   const DEBUG = args.debug || process.env.DEBUG;
   const REGION = args.region || process.env.AWS_REGION || process.env.REGION || null;
   const LAYER_VERSION = process.env.LAYER_VERSION || args.layerVersion || args['layer-version'];
-  const ACCOUNT_ID = getAccountId(args, sts);
+  const ACCOUNT_ID = process.env.ACCOUNT_ID || getAccountId(args, sts);
 
   shell.echo('Retrieve current branch name and last Commit Id'.info);
   let gitResponse = shell.exec('git branch --show-current', { silent: !DEBUG });
@@ -95,7 +92,14 @@ async function publish(args) {
   if (CheckIfServerlessExists() || args['use-yaml']) {
     let info = {};
     if (args['use-yaml']) {
-      throw new Error('Not Yet Implemented');
+      const readYaml = new Converter(config);
+      console.log('todo...');
+      readYaml.LoadYaml(config.applicationYaml);
+      readYaml.ExtractLambdaInfo();
+      // eslint-disable-next-line prefer-destructuring
+      info = readYaml.GetConverted().filter((converted) => converted.codeUri.includes(process.cwd().split(path.sep).reverse()[0]))[0];
+
+      console.debug(info);
     } else {
       info = GetLambdaInfo();
     }
